<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_border"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/linear_layout_card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#efefef"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/placeholderName" />

            <TextView
                android:id="@+id/text_view_address"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/placeholderAddress"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/linear_layout_image_preview"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:srcCompat="@android:color/darker_gray" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/text_view_description"
            android:text="@string/placeholderDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/text_view_seller"
            android:text="@string/placeholderSeller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>